--- a/aula67/index.html
+++ b/aula67/index.html
@@ -12,7 +12,7 @@
         <h1>Lista de Tarefas</h1>
 
         <p>
-            <input type="text" class="input-tarefa">
+            <input type="text" class="input-tarefa" placeholder="Ex: Estudar">
             <button class="btn-tarefa">Adicionar</button>
         </p>
 
