--- a/aula67/index.html
+++ b/aula67/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de tarefas </title>
     <link rel="stylesheet" href=".\assets\css\style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 </head>
 <body>
 
     <section class="container">
-        <h1>Lista de Tarefas</h1>
+        <h1>ToDo List</h1>
 
         <p>
             <input type="text" class="input-tarefa" placeholder="Ex: Estudar">
