--- a/aula67/index.html
+++ b/aula67/index.html
@@ -15,7 +15,7 @@
 
         <p>
             <input type="text" class="input-tarefa" placeholder="Ex: Estudar">
-            <button class="btn-tarefa">Adicionar</button>
+            <button class="btn-tarefa" title="Adicionar tarefa">Adicionar</button>
         </p>
 
         <!-- Criando uma lista -->
