feat: add new clear items btn and add new alert for exceptions and sucess

--- a/aula67/index.html
+++ b/aula67/index.html
@@ -15,13 +15,15 @@
 
         <p>
             <input type="text" class="input-tarefa" placeholder="Ex: Estudar">
-            <button class="btn-tarefa" title="Adicionar tarefa">Adicionar</button>
+            <button class="btn-tarefa" title="Adicionar tarefa">Submit</button>
         </p>
 
         <!-- Criando uma lista -->
         
         <ul class="tarefas"></ul>
-
+        <button class="btn-delete" title="Deletar tarefas">Clear Items</button>
+        <div class="alert"></div>
+        <div class="alert-sucess"></div>
     </section>
     
 
